build_errors.txt
    Checking atomicals-rs v0.1.0 (/mnt/d/atom/atomicalsR)
warning: unused import: `wasm_bindgen::JsCast`
  --> src/operations/mining.rs:10:5
   |
10 | use wasm_bindgen::JsCast;
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `bitcoin::Script`
 --> src/types/atomicals.rs:3:5
  |
3 | use bitcoin::Script;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `bitcoin::Transaction`
  --> src/types/mod.rs:13:5
   |
13 | use bitcoin::Transaction;
   |     ^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`
  --> src/types/mod.rs:14:13
   |
14 | use serde::{Serialize, Deserialize};
   |             ^^^^^^^^^  ^^^^^^^^^^^

warning: unused import: `Promise`
 --> src/wallet/web/unisat.rs:7:32
  |
7 | use js_sys::{Function, Object, Promise, Reflect, Array};
  |                                ^^^^^^^

warning: unused import: `console`
  --> src/wallet/web/wizz.rs:10:23
   |
10 | use web_sys::{window, console};
   |                       ^^^^^^^

warning: unused import: `crate::types::AtomicalsTx`
 --> src/wallet/mod.rs:7:5
  |
7 | use crate::types::AtomicalsTx;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `MintConfig`
 --> src/wasm/mod.rs:2:33
  |
2 | use crate::types::{Arc20Config, MintConfig};
  |                                 ^^^^^^^^^^

warning: unused import: `serde_json::Value`
 --> src/wasm/mod.rs:6:5
  |
6 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^

warning: unused imports: `Transaction`, `TxIn`, and `TxOut`
 --> src/utils/tx_size.rs:1:15
  |
1 | use bitcoin::{Transaction, TxIn, TxOut, ScriptBuf};
  |               ^^^^^^^^^^^  ^^^^  ^^^^^

warning: variant `P2SH_P2WPKH` should have an upper camel case name
  --> src/utils/tx_size.rs:73:5
   |
73 |     P2SH_P2WPKH, // Nested SegWit
   |     ^^^^^^^^^^^ help: convert the identifier to upper camel case: `P2shP2wpkh`
   |
   = note: `#[warn(non_camel_case_types)]` on by default

warning: unused variable: `worker_stop`
  --> src/operations/mining.rs:64:13
   |
64 |         let worker_stop = stop_mining.clone();
   |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_worker_stop`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
  --> src/operations/mining.rs:67:13
   |
67 |         let mut opts = WorkerOptions::new();
   |             ----^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

warning: unused variable: `workers`
   --> src/operations/mining.rs:139:5
    |
139 |     workers: &[Worker],
    |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_workers`

warning: unused variable: `stop_mining`
   --> src/operations/mining.rs:140:5
    |
140 |     stop_mining: &Arc<AtomicBool>,
    |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_stop_mining`

error[E0599]: no variant or associated item named `InsufficientFunds` found for enum `errors::Error` in the current scope
   --> src/operations/mint_ft.rs:123:39
    |
123 |             None => return Err(Error::InsufficientFunds("Not enough funds after fees".into())),
    |                                       ^^^^^^^^^^^^^^^^^ variant or associated item not found in `Error`
    |
   ::: src/errors/mod.rs:9:1
    |
9   | pub enum Error {
    | -------------- variant or associated item `InsufficientFunds` not found for this enum

error[E0599]: no variant or associated item named `InsufficientFunds` found for enum `errors::Error` in the current scope
   --> src/operations/mint_ft.rs:125:35
    |
125 |         None => return Err(Error::InsufficientFunds("Not enough funds to cover fees".into())),
    |                                   ^^^^^^^^^^^^^^^^^ variant or associated item not found in `Error`
    |
   ::: src/errors/mod.rs:9:1
    |
9   | pub enum Error {
    | -------------- variant or associated item `InsufficientFunds` not found for this enum

error[E0599]: no variant or associated item named `InsufficientFunds` found for enum `errors::Error` in the current scope
  --> src/operations/mint_ft.rs:73:16
   |
73 |     Err(Error::InsufficientFunds("Not enough funds to cover amount and fees".into()))
   |                ^^^^^^^^^^^^^^^^^ variant or associated item not found in `Error`
   |
  ::: src/errors/mod.rs:9:1
   |
9  | pub enum Error {
   | -------------- variant or associated item `InsufficientFunds` not found for this enum

warning: use of deprecated method `bitcoin::Script::is_v0_p2wpkh`: use is_p2wpkh instead
  --> src/utils/tx_size.rs:80:26
   |
80 |         } else if script.is_v0_p2wpkh() {
   |                          ^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: unused variable: `account_str`
  --> src/wallet/web/wizz.rs:70:13
   |
70 |         let account_str: String = from_value(account)?;
   |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_account_str`

warning: unused variable: `promise`
  --> src/wallet/web/wizz.rs:86:27
   |
86 |                 if let Ok(promise) = JsFuture::from(connect_result.unchecked_into::<Promise>()).await {
   |                           ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_promise`

warning: unused variable: `commit_psbt`
  --> src/wallet/mod.rs:40:49
   |
40 |     async fn sign_atomicals_transactions(&self, commit_psbt: Psbt, reveal_psbt: Psbt) -> Result<(Transaction, Transaction)> {
   |                                                 ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_commit_psbt`

warning: unused variable: `reveal_psbt`
  --> src/wallet/mod.rs:40:68
   |
40 |     async fn sign_atomicals_transactions(&self, commit_psbt: Psbt, reveal_psbt: Psbt) -> Result<(Transaction, Transaction)> {
   |                                                                    ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_reveal_psbt`

For more information about this error, try `rustc --explain E0599`.
warning: `atomicals-rs` (lib) generated 20 warnings
error: could not compile `atomicals-rs` (lib) due to 3 previous errors; 20 warnings emitted
